# Onye

./: .gitignore  CLAUDE.md
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  google_adk_agent.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/endpoints/: __init__.py  data_quality.py  reconcile.py
backend/app/core/: config.py
backend/app/schemas/: data_quality.py  reconcile.py
backend/app/services/: data_quality_service.py  reconciliation_service.py
backend/onye_ehr_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_agent.py  test_auth.py  test_health.py
